fix z-index boxhero2 text par dessus navbar

--- a/src/components/HeroSection.scss
+++ b/src/components/HeroSection.scss
@@ -142,6 +142,7 @@
       }
     }
     .boxHero2 {
+      z-index: 100;
       max-width: 420px;
       padding: 60px;
       top: 0;
